--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             la frente en alto, y nunca olvides que eres una persona maravillosa con un corazón hermoso.❤️
           </p>
           <p>
-            ¡Feliz cumpleaños, amor! 🎂💕 Espero que pases un día maravilloso y que disfrutes
-            mucho tu regalo. Quise preparar algo especial y original para ti, porque te lo mereces.
+            ¡Feliz Cumpleaños amor 🎂💕 que pases un día maravilloso y que disfrutes
+            mucho tu regalo. Quise preparar algo especial porque te lo mereces.
             A pesar de la distancia, este día es muy importante para tí y jamás me olvidaría de
             celebrarte. Gracias por ser paciente conmigo, que cumplas muchos años y Dios bendiga siempre tu camino.🎉✨
           </p>
