--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <div class="mainScreen centered" id="mainScreen">
     <div>
       <div class="title">🎉 ¡FELIZ CUMPLEAÑOS! 🎉</div>
-      <div class="subtitle">Tu sorpresa está lista, toca el pastel para descubrirla 🎂</div>
+      <div class="subtitle">Tu sorpresa está lista, toca el pastel para descubrirla </div>
 
       <div class="cake-container">
-        <div class="cake" id="cake" title="Haz clic para activar el regalo">🎂</div>
+        <div class="cake" id="cake" title="Haz clic para activar el regalo"></div>
       </div>
     </div>
   </div>
@@ -48,9 +48,8 @@
         <div class="album">
           <div class="cover" id="cover">
             <img id="coverImg" src="./images/portada.jpg" alt="Portada"
-              style="width:100%;height:100%;object-fit:cover;display:none"
-              onload="this.style.display='block'; document.getElementById('coverFallback').style.display='none';"
-              onerror="this.style.display='none'; document.getElementById('coverFallback').style.display='flex';">
+              style="width:100%;height:100%;object-fit:cover;display:none" onload="this.style.display='block'; "
+              onerror="this.style.display='none'; ">
 
           </div>
           <div class="track-title">Feliz Cumpleaños Amor💕🎉</div>
@@ -88,7 +87,8 @@
             Eres una persona increíble que me ha devuelto la confianza y me ha demostrado
             que no me equivoqué en esa elección. Hoy celebramos un año más de tu vida,
             y aunque ya estás "viejito", pero eres mi viejito👴🏼.
-            Te deseo que todos tus sueños se hagan realidad que sin importar lo que te depare el futuro, sigue siempre adelante con
+            Te deseo que todos tus sueños se hagan realidad que sin importar lo que te depare el futuro, sigue siempre
+            adelante con
             la frente en alto, y nunca olvides que eres una persona maravillosa con un corazón hermoso.❤️
           </p>
           <p>
@@ -97,10 +97,13 @@
             A pesar de la distancia, este día es muy importante para tí y jamás me olvidaría de
             celebrarte. Gracias por ser paciente conmigo, que cumplas muchos años y Dios bendiga siempre tu camino.🎉✨
           </p>
-          <img id="coverImg" src="./images/portada2.jpg" alt="Portada"
-              style="width:100%;height:100%;object-fit:cover;display:none"
-              onload="this.style.display='block'; document.getElementById('coverFallback').style.display='none';"
-              onerror="this.style.display='none'; document.getElementById('coverFallback').style.display='flex';">
+          <div class="album">
+            <div class="cover" id="cover">
+              <img id="coverImg" src="./images/portada2.jpg" alt="Portada"
+                style="width:100%;height:100%;object-fit:cover;display:none" onload="this.style.display='block';"
+                onerror="this.style.display='none';">
+            </div>
+          </div>
           <p>
             💕❤️TE AMO AMOR ❤️💕
           </p>
