--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>🎉 Sorpresa de Cumpleaños 🎂</title>
+  <title>🎉 Sorpresa de Cumpleaños </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -32,7 +32,7 @@
   <div class="mainScreen centered" id="mainScreen">
     <div>
       <div class="title">🎉 ¡FELIZ CUMPLEAÑOS! 🎉</div>
-      <div class="subtitle">Tu sorpresa está lista, toca el pastel para descubrirla </div>
+      <div class="subtitle">Tu sorpresa está lista, toca el regalo para descubrirla </div>
 
       <div class="cake-container">
         <div class="cake" id="cake" title="Haz clic para activar el regalo"></div>
